--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                 Relationship compatibility
               </h3>
               <p class="feature-text">
-                Compare charts and see where things feel easy — and where they run hot.
+                Compare charts and receive an estimated compatibility score.
               </p>
               <ul class="feature-list">
                 <li>Partner chart comparison with synastry overview.</li>
