--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                 Transits, retrogrades & alerts
               </h3>
               <p class="feature-text">
-                Opt in to quiet, purposeful notifications that actually matter.
+                Receive purposeful notifications.
               </p>
               <ul class="feature-list">
                 <li>Zodiac sign ingress alerts for the Sun and Moon.</li>
@@ -693,8 +693,8 @@
 
           <p class="data-line">
             Data safety: core calculations run locally on your device. Analytics & ads respect the Play Store
-            data-safety rules; see the in-app privacy notice and
-            <a href="https://astrocycles.uk/privacy" target="_blank" rel="noopener">full privacy policy</a>.
+            data-safety rules; see privacy notice and
+            <a href="https://astrocycles.uk/privacy" target="_blank" rel="noopener">full privacy policy for details! </a>.
           </p>
         </div>
       </div>
